# expose

./: COPYING  LICENSE  Readme  TODO  e-module-expose.edj  e_int_config_winlist.c  e_mod_main.c  e_mod_main.h  expose_winlist.c  expose_winlist.h  meson.build  module.desktop
e-module-expose/: build.sh  icon.xcf  module.edc
